TruckList and LoaderList Adjusted

--- a/pages/truck.html
+++ b/pages/truck.html
@@ -324,48 +324,23 @@
                     <div class="col-lg-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <i class="fa fa-list fa-fw"></i> TruckList
+                                <i class="fa fa-list fa-fw"></i> LoaderList
                             </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
                                 <div class="list-group">
                                     <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck1
+                                        <i class="fa fa-truck fa-fw"></i> Loader1
                                             <span class="pull-right text-muted small"><em>5 minutes away</em>
                                             </span>
                                     </a>
                                     <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck2
+                                        <i class="fa fa-truck fa-fw"></i> Loader2
                                             <span class="pull-right text-muted small"><em>10 minutes away</em>
                                             </span>
                                     </a>
                                     <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck3
-                                            <span class="pull-right text-muted small"><em>x minutes away</em>
-                                            </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck4
-                                            <span class="pull-right text-muted small"><em>x minutes away</em>
-                                            </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck5
-                                            <span class="pull-right text-muted small"><em>x minutes away</em>
-                                            </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck6
-                                            <span class="pull-right text-muted small"><em>x minutes away</em>
-                                            </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck7
-                                            <span class="pull-right text-muted small"><em>x minutes away</em>
-                                            </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-truck fa-fw"></i> Truck8
+                                        <i class="fa fa-truck fa-fw"></i> Loader3
                                             <span class="pull-right text-muted small"><em>x minutes away</em>
                                             </span>
                                     </a>
