Truck & Manager & Index & Graph completed

--- a/pages/manager.html
+++ b/pages/manager.html
@@ -395,22 +395,12 @@
                             </div>
                             <!-- /.panel-body -->
                         </div>
-                        <!-- /.panel -->
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <i class="fa fa-bar-chart-o fa-fw"></i> Productivity
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-donut-chart"></div>
-                                <a href="#" class="btn btn-default btn-block">View Details</a>
-                            </div>
-                            <!-- /.panel-body -->
-                        </div>
-                        <!-- /.panel -->
+                        
                         <div class="chat-panel panel panel-default">
-                            <div class="panel-heading">
+                            <div style = "font-size: 35pt; font-weight: bold" class="panel-heading">
+
                                 <i class="fa fa-comments fa-fw"></i>
-                                Hello Manager!
+                                Oi, Dispatch !!!
                                 <div class="btn-group pull-right">
                                     <button type="button" class="btn btn-default btn-xs dropdown-toggle"
                                             data-toggle="dropdown">
