--- a/pages/truck.html
+++ b/pages/truck.html
@@ -152,7 +152,10 @@
                                 <a href="#"><i class="fa fa-files-o fa-fw"></i> Accounts <span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="index.html">Login Page</a>
+                                        <a href="index.html">Login</a>
+                                    </li>
+                                    <li>
+                                        <a href="index.html">Logout</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
