--- a/pages/truck.html
+++ b/pages/truck.html
@@ -282,9 +282,9 @@
                                 <i class="fa fa-bar-chart-o fa-fw"></i> Map
                                 <div id="minecontainer">
 <div id="minemap" style="height: 400px;"></div>
-     <div style="white-space: nowrap; text-align: center; width: 800px; padding: 6px 0;">
-        <a id="largeMapLink" target="_blank" href="https://www.bing.com/maps?cp=-33.6389105~147.3847931&amp;sty=h&amp;lvl=14&amp;FORM=MBEDLD">View Larger Map</a> &nbsp; | &nbsp;
-        <a id="dirMapLink" target="_blank" href="https://www.bing.com/maps/directions?cp=-33.6389105~147.3847931&amp;sty=h&amp;lvl=14&amp;rtp=~pos.-33.6389105_147.3847931____&amp;FORM=MBEDLD">Get Directions</a>
+     <div style="white-space: nowrap; text-align: center; padding: 6px 0;">
+       <a id="largeMapLink" target="_blank" href="https://www.google.com.au/maps/@-33.6389929,147.3893479,4592m/data=!3m1!1e3">View Larger Map</a> &nbsp; | &nbsp;
+       <a id="dirMapLink" target="_blank" href="https://www.google.com.au/maps/dir//Evolution+Mining%2FBarrick+Gold+Mine,+Lake+Cowal+NSW+2671/">Get Directions</a>
     </div>
 </div>
                             </div>
