--- a/pages/manager.html
+++ b/pages/manager.html
@@ -289,11 +289,93 @@
 </div>
                             </div>
                             <!-- /.panel-heading -->
-                            <div class="panel-body">
-                                <div id="morris-area-chart"></div>
-                            </div>
+
                             <!-- /.panel-body -->
                         </div>
+                        <div class="panel panel-default">
+
+                        <div class="panel-body">
+                            <div id="morris-area-chart"></div>
+                        </div>
+                      </div>
+                        <!-- /.panel -->
+                       <div class="panel panel-default">
+                           <div class="panel-heading">
+                               <i class="fa fa-clock-o fa-fw"></i> Oi, Dispatch
+                           </div>
+                           <!-- /.panel-heading -->
+                           <div class="panel-body">
+                               <ul class="timeline">
+                                   <li>
+                                       <div class="timeline-badge"><i class="fa fa-check"></i>
+                                       </div>
+                                       <div class="timeline-panel">
+                                           <div class="timeline-heading">
+                                               <h4 class="timeline-title">Truck TRH403</h4>
+
+                                               <p>
+                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 5 minutes ago
+                                                   </small>
+                                               </p>
+                                           </div>
+                                           <div class="timeline-body">
+                                               <p>Unloaded 192t at LG_PRIME</p>
+                                           </div>
+                                       </div>
+                                   </li>
+                                   <li class="timeline-inverted">
+                                       <div class="timeline-badge warning"><i class="fa fa-credit-card"></i>
+                                       </div>
+                                       <div class="timeline-panel">
+                                           <div class="timeline-heading">
+                                               <h4 class="timeline-title">Truck TRH410</h4>
+                                               <p>
+                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 6 minutes ago
+                                                   </small>
+                                               </p>
+                                           </div>
+                                           <div class="timeline-body">
+                                               <p>Fuel level is low, two cycles remaining</p>
+                                           </div>
+                                       </div>
+                                   </li>
+                                   <li>
+                                       <div class="timeline-badge danger"><i class="fa fa-bomb"></i>
+                                       </div>
+                                       <div class="timeline-panel">
+                                           <div class="timeline-heading">
+                                               <h4 class="timeline-title">Truck TRH405 recorded an accident</h4>
+                                               <p>
+                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 9 minutes ago
+                                                   </small>
+                                               </p>
+                                           </div>
+                                           <div class="timeline-body">
+                                               <p>Estimated delay: 20min</p>
+                                           </div>
+                                       </div>
+                                   </li>
+                                   <li class="timeline-inverted">
+                                       <div class="timeline-badge success"><i class="fa"></i>
+                                       </div>
+                                       <div class="timeline-panel">
+                                           <div class="timeline-heading">
+                                               <h4 class="timeline-title">Status Report: 4% above average</h4>
+                                               <p>
+                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 13 minutes ago
+                                                   </small>
+                                               </p>
+                                           </div>
+                                           <div class="timeline-body">
+                                               <p>Efficiency of past 60 minutes is 4% above long-term average.</p>
+                                           </div>
+                                       </div>
+                                   </li>
+                               </ul>
+                           </div>
+                           <!-- /.panel-body -->
+                       </div>
+<!-- /.panel -->
 
 
                     </div>
@@ -393,142 +475,10 @@
                                 <!-- /.list-group -->
                                 <a href="#" class="btn btn-default btn-block">View All Alerts</a>
                             </div>
+
                             <!-- /.panel-body -->
                         </div>
-                        
-                        <div class="chat-panel panel panel-default">
-                            <div style = "font-size: 35pt; font-weight: bold" class="panel-heading">
 
-                                <i class="fa fa-comments fa-fw"></i>
-                                Oi, Dispatch !!!
-                                <div class="btn-group pull-right">
-                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                                            data-toggle="dropdown">
-                                        <i class="fa fa-chevron-down"></i>
-                                    </button>
-                                    <ul class="dropdown-menu slidedown">
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-refresh fa-fw"></i> Refresh
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-check-circle fa-fw"></i> Available
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-times fa-fw"></i> Busy
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-clock-o fa-fw"></i> Away
-                                            </a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-sign-out fa-fw"></i> Sign Out
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- /.panel-heading -->
-                            <div class="panel-body">
-                                <ul class="chat">
-                                    <li class="left clearfix">
-                                            <span class="chat-img pull-left">
-                                                <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar"
-                                                     class="img-circle"/>
-                                            </span>
-
-                                        <div class="chat-body clearfix">
-                                            <div class="header">
-                                                <strong class="primary-font">Driver 1: Jack Sparrow</strong>
-                                                <small class="pull-right text-muted">
-                                                    <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
-                                                </small>
-                                            </div>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                                                ornare dolor, quis ullamcorper ligula sodales.
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li class="right clearfix">
-                                            <span class="chat-img pull-right">
-                                                <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar"
-                                                     class="img-circle"/>
-                                            </span>
-
-                                        <div class="chat-body clearfix">
-                                            <div class="header">
-                                                <small class=" text-muted">
-                                                    <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
-                                                </small>
-                                                <strong class="pull-right primary-font">Driver 2: Bhaumik Patel</strong>
-                                            </div>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                                                ornare dolor, quis ullamcorper ligula sodales.
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li class="left clearfix">
-                                            <span class="chat-img pull-left">
-                                                <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar"
-                                                     class="img-circle"/>
-                                            </span>
-
-                                        <div class="chat-body clearfix">
-                                            <div class="header">
-                                                <strong class="primary-font">Driver 1: Jack Sparrow</strong>
-                                                <small class="pull-right text-muted">
-                                                    <i class="fa fa-clock-o fa-fw"></i> 14 mins ago
-                                                </small>
-                                            </div>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                                                ornare dolor, quis ullamcorper ligula sodales.
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li class="right clearfix">
-                                            <span class="chat-img pull-right">
-                                                <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar"
-                                                     class="img-circle"/>
-                                            </span>
-
-                                        <div class="chat-body clearfix">
-                                            <div class="header">
-                                                <small class=" text-muted">
-                                                    <i class="fa fa-clock-o fa-fw"></i> 15 mins ago
-                                                </small>
-                                                <strong class="pull-right primary-font">Driver 2: Bhaumik Patel</strong>
-                                            </div>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
-                                                ornare dolor, quis ullamcorper ligula sodales.
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- /.panel-body -->
-                            <div class="panel-footer">
-                                <div class="input-group">
-                                    <input id="btn-input" type="text" class="form-control input-sm"
-                                           placeholder="Type your message here..."/>
-                                        <span class="input-group-btn">
-                                            <button class="btn btn-warning btn-sm" id="btn-chat">
-                                                Send
-                                            </button>
-                                        </span>
-                                </div>
-                            </div>
                             <!-- /.panel-footer -->
                         </div>
                         <!-- /.panel .chat-panel -->
