loader and loader tab added

--- a/pages/truck.html
+++ b/pages/truck.html
@@ -169,6 +169,10 @@
                                 <a href="truck.html" class="active"><i class="fa fa-bar-chart-o fa-fw"></i> Truck</a>
 
                             </li>
+                            <li>
+                                <a href="loader.html" class="active"><i class="fa fa-loader-o fa-fw"></i> Loader</a>
+
+                            </li>
 
                         </ul>
                     </div>
