--- a/pages/loader.html
+++ b/pages/loader.html
@@ -163,10 +163,11 @@
 
 
                             <li>
-                                <a href="manager.html" class="active"><i class="fa fa-dashboard fa-fw"></i> Manager</a>
+                                <a href="manager.html" ><i class="fa fa-dashboard fa-fw"></i> Manager</a>
                             </li>
                             <li>
-                                <a href="truck.html"><i class="fa fa-bar-chart-o fa-fw"></i> Truck</a>
+                                <a href="truck.html" class="active"><i class="fa fa-bar-chart-o fa-fw"></i> Truck</a>
+
                             </li>
                             <li>
                                 <a href="loader.html" class="active"><i class="fa fa-loader-o fa-fw"></i> Loader</a>
@@ -181,7 +182,7 @@
             <div id="page-wrapper">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Manager</h1>
+                        <h1 class="page-header">Loader</h1>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
@@ -241,7 +242,7 @@
                                         <i class="fa fa-shopping-cart fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">42876t</div>
+                                        <div class="huge">1837t</div>
                                         <div>Material Hauled this Shift</div>
                                     </div>
                                 </div>
@@ -289,100 +290,44 @@
                                 <div id="minecontainer">
 <div id="minemap" style="height: 600px;"></div>
      <div style="white-space: nowrap; text-align: center; padding: 6px 0;">
-        <a id="largeMapLink" target="_blank" href="https://www.google.com.au/maps/@-33.6389929,147.3893479,4592m/data=!3m1!1e3">View Larger Map</a> &nbsp; | &nbsp;
-        <a id="dirMapLink" target="_blank" href="https://www.google.com.au/maps/dir//Evolution+Mining%2FBarrick+Gold+Mine,+Lake+Cowal+NSW+2671/">Get Directions</a>
+       <a id="largeMapLink" target="_blank" href="https://www.google.com.au/maps/@-33.6389929,147.3893479,4592m/data=!3m1!1e3">View Larger Map</a> &nbsp; | &nbsp;
+       <a id="dirMapLink" target="_blank" href="https://www.google.com.au/maps/dir//Evolution+Mining%2FBarrick+Gold+Mine,+Lake+Cowal+NSW+2671/">Get Directions</a>
     </div>
 </div>
                             </div>
                             <!-- /.panel-heading -->
-
+                            <div class="panel-body">
+                                <div id="morris-area-chart"></div>
+                            </div>
                             <!-- /.panel-body -->
                         </div>
-                        <div class="panel panel-default">
-
-                        <div class="panel-body">
-                            <div id="morris-area-chart"></div>
-                        </div>
-                      </div>
                         <!-- /.panel -->
-                       <div class="panel panel-default">
-                           <div class="panel-heading">
-                               <i class="fa fa-clock-o fa-fw"></i> Oi, Dispatch
-                           </div>
-                           <!-- /.panel-heading -->
-                           <div class="panel-body">
-                               <ul class="timeline">
-                                   <li>
-                                       <div class="timeline-badge"><i class="fa fa-check"></i>
-                                       </div>
-                                       <div class="timeline-panel">
-                                           <div class="timeline-heading">
-                                               <h4 class="timeline-title">Truck TRH403</h4>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <div class="pull-right">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default btn-xs dropdown-toggle"
+                                                data-toggle="dropdown">
+                                            Actions
+                                            <span class="caret"></span>
+                                        </button>
+                                        <ul class="dropdown-menu pull-right" role="menu">
+                                            <li><a href="#">Action</a>
+                                            </li>
+                                            <li><a href="#">Another action</a>
+                                            </li>
+                                            <li><a href="#">Something else here</a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li><a href="#">Separated link</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.panel-heading -->
 
-                                               <p>
-                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 5 minutes ago
-                                                   </small>
-                                               </p>
-                                           </div>
-                                           <div class="timeline-body">
-                                               <p>Unloaded 192t at LG_PRIME</p>
-                                           </div>
-                                       </div>
-                                   </li>
-                                   <li class="timeline-inverted">
-                                       <div class="timeline-badge warning"><i class="fa fa-credit-card"></i>
-                                       </div>
-                                       <div class="timeline-panel">
-                                           <div class="timeline-heading">
-                                               <h4 class="timeline-title">Truck TRH410</h4>
-                                               <p>
-                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 6 minutes ago
-                                                   </small>
-                                               </p>
-                                           </div>
-                                           <div class="timeline-body">
-                                               <p>Fuel level is low, two cycles remaining</p>
-                                           </div>
-                                       </div>
-                                   </li>
-                                   <li>
-                                       <div class="timeline-badge danger"><i class="fa fa-bomb"></i>
-                                       </div>
-                                       <div class="timeline-panel">
-                                           <div class="timeline-heading">
-                                               <h4 class="timeline-title">Truck TRH405 recorded an accident</h4>
-                                               <p>
-                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 9 minutes ago
-                                                   </small>
-                                               </p>
-                                           </div>
-                                           <div class="timeline-body">
-                                               <p>Estimated delay: 20min</p>
-                                           </div>
-                                       </div>
-                                   </li>
-                                   <li class="timeline-inverted">
-                                       <div class="timeline-badge success"><i class="fa"></i>
-                                       </div>
-                                       <div class="timeline-panel">
-                                           <div class="timeline-heading">
-                                               <h4 class="timeline-title">Status Report: 4% above average</h4>
-                                               <p>
-                                                   <small class="text-muted"><i class="fa fa-clock-o"></i> 13 minutes ago
-                                                   </small>
-                                               </p>
-                                           </div>
-                                           <div class="timeline-body">
-                                               <p>Efficiency of past 60 minutes is 4% above long-term average.</p>
-                                           </div>
-                                       </div>
-                                   </li>
-                               </ul>
-                           </div>
-                           <!-- /.panel-body -->
-                       </div>
-<!-- /.panel -->
-
+                        </div>
 
                     </div>
                     <!-- /.col-lg-8 -->
@@ -484,10 +429,142 @@
 
                             <!-- /.panel-body -->
                         </div>
+                        <div class="chat-panel panel panel-default">
+                            <div style = "font-size: 35pt; font-weight: bold" class="panel-heading">
 
+                                <i class="fa fa-comments fa-fw"></i>
+                                Oi, Dispatch !!!
+                                <div class="btn-group pull-right">
+                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle"
+                                            data-toggle="dropdown">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </button>
+                                    <ul class="dropdown-menu slidedown">
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-refresh fa-fw"></i> Refresh
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-check-circle fa-fw"></i> Available
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-times fa-fw"></i> Busy
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-clock-o fa-fw"></i> Away
+                                            </a>
+                                        </li>
+                                        <li class="divider"></li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-sign-out fa-fw"></i> Sign Out
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <ul class="chat">
+                                    <li class="left clearfix">
+                                            <span class="chat-img pull-left">
+                                                <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar"
+                                                     class="img-circle"/>
+                                            </span>
+
+                                        <div class="chat-body clearfix">
+                                            <div class="header">
+                                                <strong class="primary-font">Driver 1: Jack Sparrow</strong>
+                                                <small class="pull-right text-muted">
+                                                    <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
+                                                </small>
+                                            </div>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                                                ornare dolor, quis ullamcorper ligula sodales.
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li class="right clearfix">
+                                            <span class="chat-img pull-right">
+                                                <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar"
+                                                     class="img-circle"/>
+                                            </span>
+
+                                        <div class="chat-body clearfix">
+                                            <div class="header">
+                                                <small class=" text-muted">
+                                                    <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
+                                                </small>
+                                                <strong class="pull-right primary-font">Driver 2: Bhaumik Patel</strong>
+                                            </div>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                                                ornare dolor, quis ullamcorper ligula sodales.
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li class="left clearfix">
+                                            <span class="chat-img pull-left">
+                                                <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar"
+                                                     class="img-circle"/>
+                                            </span>
+
+                                        <div class="chat-body clearfix">
+                                            <div class="header">
+                                                <strong class="primary-font">Driver 1: Jack Sparrow</strong>
+                                                <small class="pull-right text-muted">
+                                                    <i class="fa fa-clock-o fa-fw"></i> 14 mins ago
+                                                </small>
+                                            </div>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                                                ornare dolor, quis ullamcorper ligula sodales.
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li class="right clearfix">
+                                            <span class="chat-img pull-right">
+                                                <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar"
+                                                     class="img-circle"/>
+                                            </span>
+
+                                        <div class="chat-body clearfix">
+                                            <div class="header">
+                                                <small class=" text-muted">
+                                                    <i class="fa fa-clock-o fa-fw"></i> 15 mins ago
+                                                </small>
+                                                <strong class="pull-right primary-font">Driver 2: Bhaumik Patel</strong>
+                                            </div>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum
+                                                ornare dolor, quis ullamcorper ligula sodales.
+                                            </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- /.panel-body -->
+                            <div class="panel-footer">
+                                <div class="input-group">
+                                    <input id="btn-input" type="text" class="form-control input-sm"
+                                           placeholder="Type your message here..."/>
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-warning btn-sm" id="btn-chat">
+                                                Send
+                                            </button>
+                                        </span>
+                                </div>
+                            </div>
                             <!-- /.panel-footer -->
                         </div>
-                        <!-- /.panel .chat-panel -->
+
                     </div>
                     <!-- /.col-lg-4 -->
                 </div>
@@ -511,14 +588,13 @@
         <script src="../js/raphael.min.js"></script>
         <script src="../js/morris.min.js"></script>
         <script src="../js/morris-data.js"></script>
-        <!-- Make sure you put this AFTER Leaflet's CSS -->
-<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-  crossorigin=""></script>
+
+        <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+          integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+          crossorigin=""></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="../js/startmin.js"></script>
-
 
     </body>
 </html>
