fix icons in sidebar, add text to all map markers

--- a/pages/loader.html
+++ b/pages/loader.html
@@ -24,6 +24,8 @@
         <!-- Morris Charts CSS -->
         <link href="../css/morris.css" rel="stylesheet">
 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
         <!-- Custom Fonts -->
         <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -163,14 +165,14 @@
 
 
                             <li>
-                                <a href="manager.html" ><i class="fa fa-dashboard fa-fw"></i> Manager</a>
+                                <a href="manager.html" ><i class="fas fa-tachometer-alt fa-fw"></i> Manager</a>
                             </li>
                             <li>
-                                <a href="truck.html" class="active"><i class="fa fa-bar-chart-o fa-fw"></i> Truck</a>
+                                <a href="truck.html"><i class="fas fa-bar-chart-o fa-truck fw"></i> Truck</a>
 
                             </li>
                             <li>
-                                <a href="loader.html" class="active"><i class="fa fa-loader-o fa-fw"></i> Loader</a>
+                                <a href="loader.html" class="active"><i class="fas fa-quidditch fa-fw"></i> Loader</a>
 
                             </li>
 
