--- a/pages/truck.html
+++ b/pages/truck.html
@@ -27,6 +27,8 @@
         <!-- Custom Fonts -->
         <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
   crossorigin=""/>
@@ -163,15 +165,14 @@
 
 
                             <li>
-                                <a href="manager.html" ><i class="fa fa-dashboard fa-fw"></i> Manager</a>
+                                <a href="manager.html" ><i class="fas fa-tachometer-alt fa-fw"></i> Manager</a>
                             </li>
                             <li>
-                                <a href="truck.html" class="active"><i class="fa fa-bar-chart-o fa-fw"></i> Truck</a>
+                                <a href="truck.html" class="active"><i class="fas fa-truck fa-fw"></i> Truck</a>
 
                             </li>
                             <li>
-                                <a href="loader.html" class="active"><i class="fa fa-loader-o fa-fw"></i> Loader</a>
-
+                                <a href="loader.html"><i class="fa fa-quidditch fa-fw"></i> Loader</a>
                             </li>
 
                         </ul>
