fix oi dispatch display

--- a/pages/truck.html
+++ b/pages/truck.html
@@ -342,46 +342,13 @@
                             </div>
                             <!-- /.panel-body -->
                         </div>
+                      </div>
                         <div class="chat-panel panel panel-default">
-                            <div style = "font-size: 35pt; font-weight: bold" class="panel-heading">
+                            <div style = "font-size: 20pt; font-weight: bold" class="panel-heading">
 
                                 <i class="fa fa-comments fa-fw"></i>
-                                Oi, Dispatch !!!
-                                <div class="btn-group pull-right">
-                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                                            data-toggle="dropdown">
-                                        <i class="fa fa-chevron-down"></i>
-                                    </button>
-                                    <ul class="dropdown-menu slidedown">
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-refresh fa-fw"></i> Refresh
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-check-circle fa-fw"></i> Available
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-times fa-fw"></i> Busy
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-clock-o fa-fw"></i> Away
-                                            </a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-sign-out fa-fw"></i> Sign Out
-                                            </a>
-                                        </li>
-                                    </ul>
+                                Oi, Dispatch
                                 </div>
-                            </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
                                 <ul class="chat">
@@ -477,7 +444,7 @@
                             </div>
                             <!-- /.panel-footer -->
                         </div>
-
+  </div>
                     </div>
                     <!-- /.col-lg-4 -->
                 </div>
