--- a/pages/loader.html
+++ b/pages/loader.html
@@ -129,7 +129,7 @@
                             <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            <li><a href="index.html"><i class="fas fa-sign-out-alt fa-fw"></i> Logout</a>
                             </li>
                         </ul>
                     </li>
@@ -193,15 +193,15 @@
                 <!-- /.row -->
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
-                        <div class="panel panel-primary">
+                        <div class="panel panel-green">
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
                                         <i class="fa fa-truck fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">5/16</div>
-                                        <div>IDLE Trucks</div>
+                                        <div class="huge">143t/192t</div>
+                                        <div>Currently loaded</div>
                                     </div>
                                 </div>
                             </div>
@@ -223,8 +223,8 @@
                                         <i class="fa fa-tasks fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">1</div>
-                                        <div>Trucks to Allocate</div>
+                                        <div class="huge">13</div>
+                                        <div>Trucks loaded this shift</div>
                                     </div>
                                 </div>
                             </div>
@@ -417,7 +417,7 @@
                             <div style = "font-size: 20pt; font-weight: bold" class="panel-heading">
 
                                 <i class="fa fa-comments fa-fw"></i>
-                                Oi, Dispatch
+                                Dispatch Dialogue
                                 </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
