--- a/pages/manager.html
+++ b/pages/manager.html
@@ -127,7 +127,7 @@
                             <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            <li><a href="index.html"><i class="fas fa-sign-out-alt fa-fw"></i> Logout</a>
                             </li>
                         </ul>
                     </li>
@@ -309,7 +309,7 @@
                         <!-- /.panel -->
                        <div class="panel panel-default">
                            <div class="panel-heading">
-                               <i class="fa fa-clock-o fa-fw"></i> Oi, Dispatch
+                               <i class="fa fa-clock-o fa-fw"></i> Dispatch Dialogue
                            </div>
                            <!-- /.panel-heading -->
                            <div class="panel-body">
