--- a/pages/truck.html
+++ b/pages/truck.html
@@ -127,7 +127,7 @@
                             <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            <li><a href="index.html"><i class="fas fa-sign-out-alt fa-fw"></i> Logout</a>
                             </li>
                         </ul>
                     </li>
@@ -220,8 +220,8 @@
                                         <i class="fa fa-tasks fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">1</div>
-                                        <div>Trucks to Allocate</div>
+                                        <div class="huge">+1%</div>
+                                        <div>Productivity</div>
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                             <div style = "font-size: 20pt; font-weight: bold" class="panel-heading">
 
                                 <i class="fa fa-comments fa-fw"></i>
-                                Oi, Dispatch
+                                Dispatch Dialogue
                                 </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
